
	* src/types.h (igraph_array3_t, ARRAY3) : added
	* src/array.c (igraph_array3_init, igraph_array3_destroy)
	(igraph_array3_size, igraph_array3_n, igraph_array3_resize)
	(igraph_array3_null) : added
	* examples/simple/igraph_array.c :added

	* src/measure_dynamics.c (igraph_measure_dynamics_idage) : 
	slight change, first update A(k,l) and then add the edges 

2006-06-05  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/graphobject.c (igraphmodule_Graph_Adjacency,
	igraphmodule_Graph_Establishment, igraphmodule_Graph_Isoclass,
	igraphmodule_Graph_isoclass, igraphmodule_Graph_isomorphic,
	igraphmodule_Graph_bfs) : added
	* interfaces/python/graphobject.c (igraphmodule_Graph_Barabasi) :
	added support for non-linear model
	* interfaces/python/bfsiter.c : added (BFS iterator)

2006-06-03  Gabor Csardi  <csardi@kzoo.edu>

	* src/igraph_psumtree.c (igraph_psumtree_get) : added
	* examples/simple/igraph_psumtree.c : igraph_psumtree_get test added

	* src/games.c (igraph_barabasi_aging_game) : added

	* src/measure_dynamics.c (igraph_measure_dynamics_idwindowage) 
	(igraph_measure_dynamics_idwindowage_st) : added

	* src/games.c (igraph_recent_degree_aging_game) : added

	* src/layout.c (igraph_layout_merge_dla) : change to make it 
	gcc 2.95 compatible 
	
2006-05-31  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/graphobject.c (igraphmodule_Graph_transitivity,
	igraphmodule_Graph_Lattice) : added
	* interfaces/python/igraphmodule.c : added some attribute handling
	functions
	* interfaces/python/convert.c (igraphmodule_PyList_to_strvector_t) :
	added
	* interfaces/python/test.py : added test cases
	* src/structural_properties.c (igraph_transitivity) :
	fixed a memory leak
	
2006-05-29  Gabor Csardi  <csardi@kzoo.edu>

	* src/interrupt.h (IGRAPH_ALLOW_INTERRUPTION) : eliminate function
	call if not neccessary
	* src/interrupt.c (igraph_i_interruption_handler) : declaration 
	moved to .h

	* src/measure_dynamics.c (igraph_measure_dynamics_id)